Fixer errors produced by attempting to sort of or add to an unmodifyable list